--- a/techeerzip/src/main/resources/application.properties
+++ b/techeerzip/src/main/resources/application.properties
@@ -50,9 +50,9 @@ spring.rabbitmq.addresses=${RABBITMQ_URL}
 # Logging Configuration
 spring.profiles.active=${LOGGER_LEVEL:development}
 logging.level.root=INFO
-logging.level.backend.techeerzip=INFO
-logging.level.org.hibernate.SQL=INFO
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+logging.level.backend.techeerzip=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Swagger Configuration
 springdoc.swagger-ui.path=/api/v3/docs
 springdoc.api-docs.path=/api/v3/api-docs
