--- a/techeerzip/build.gradle
+++ b/techeerzip/build.gradle
@@ -73,10 +73,11 @@ dependencies {
     implementation "software.amazon.awssdk:s3:2.31.32"
 
     // GoogleDrive
-    implementation 'com.google.api-client:google-api-client:2.0.0'
-    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+    implementation 'com.google.api-client:google-api-client:2.8.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.39.0'
     implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
-    implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
+    implementation 'com.google.http-client:google-http-client-jackson2:1.47.0'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.36.0'
 }
 
 tasks.named('test', Test) {
